mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_std_import_duplicate_repeated_wildcard.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "std.math",
                spec: Wildcard,
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Import {
                module_path: "std.math",
                spec: Wildcard,
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "assert",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    Boolean(
                                        true,
                                    ),
                                ),
                                span: Span,
                            },
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "repeated math wildcard",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "PASS: repeated math wildcard",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
