mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_std_import_duplicate_root_and_module_wildcard.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "std",
                spec: Module {
                    alias: Some(
                        "std",
                    ),
                },
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Import {
                module_path: "std.math",
                spec: Wildcard,
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "assert",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    Boolean(
                                        true,
                                    ),
                                ),
                                span: Span,
                            },
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "std root + math wildcard",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "PASS: std root + math wildcard",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
