mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_std_imports.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "std",
                spec: Module {
                    alias: Some(
                        "std",
                    ),
                },
            },
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: TypedDecl(
                "result",
                TypeNode {
                    kind: Primitive(
                        Float,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: FieldAccess {
                                expr: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "std",
                                            ),
                                            span: Span,
                                        },
                                        field: "math",
                                    },
                                    span: Span,
                                },
                                field: "pow",
                            },
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    Float(
                                        2.0,
                                    ),
                                ),
                                span: Span,
                            },
                            ExpressionNode {
                                kind: Literal(
                                    Float(
                                        3.0,
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: Literal(
                                            String(
                                                "Test 1: std.math.pow(2.0, 3.0) = ",
                                            ),
                                        ),
                                        span: Span,
                                    },
                                    op: Add,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: Identifier(
                                                            "result",
                                                        ),
                                                        span: Span,
                                                    },
                                                    field: "to_string",
                                                },
                                                span: Span,
                                            },
                                            args: [],
                                        },
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "Test 1 passed!",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
